# c3

./: .bazeliskrc  .bazelrc  .cirrus.yml  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  analyze copy.py  analyze.py  analyze_cop.py  analyze_new_data.py  analyze_pvot.py  c3_debug_delta.txt  c3_debug_z.txt  c3_delta_output.txt  c3_example.cc  c3_gamma_output.txt  debug.py  debug.ui  debug_gui.py  gt_c3.py
.github/workflows/: build.yml  coverage.yml  main.yml  test-report.yml
bindings/pyc3/: BUILD.bazel  README.md  __init__.py  c3.cc  c3_multibody_py.cc  c3_py.cc  c3_systems_py.cc  requirements.txt  test_c3_smoke.py  traj_eval_py.cc
bindings/pyc3/test/: BUILD.bazel  test_c3.py  test_multibody.py  test_systems.py  test_traj_eval.py
bindings/test/: BUILD.bazel  c3_controller_py_test.py  c3_core_py_test.py  c3_py_test.py  c3_py_ti_test.py  c3_random_lcs.py  c3_systems_py_test.py  improved_c3_finger.py  improved_c3_finger_debug.py  improved_c3_pivot.py  improved_c3_py_test.py  improved_c3_random_lcs.py  lcs_factory_py_test.py  lcs_factory_system_py_test.py  system_costs.py
common/: BUILD.bazel  system_util.hpp
core/: BUILD.bazel  c3.cc  c3.h  c3_miqp.cc  c3_miqp.h  c3_miqp_no_gurobi.cc  c3_options.h  c3_output.cc  c3_output.h  c3_plus.cc  c3_plus.h  c3_py.h  c3_qp.cc  c3_qp.h  improved_c3.cc  improved_c3.h  lcs.cc  lcs.h  solver_options_io.h  traj_eval.cc  traj_eval.h  trajectory_evaluation.cc  trajectory_evaluation.h
core/common/: logging_utils.hpp
core/configs/: solve_options_default.hpp  solver_options_default.yaml
core/controllers/: c3_controller.cc  c3_controller.h  lcs_simulator.cc  lcs_simulator.h
core/test/: c3_cartpole_problem.h  c3_cartpole_problem.hpp  c3_controller_test.cc  c3_test.cc  cartpole_geometry.hpp  cartpole_softwalls.py  core_test.cc
core/test/res/: c3_cartpole_options.yaml  c3_controller_test_diagram.ps  cartpole_softwalls.sdf
core/test/resources/: c3_cartpole_options.yaml
debug_output/: c4_x_.npy  debug.npy  debug_info.txt  debug_pivot.npy  debug_proj_step.npy  debug_projection.npy  debug_qp.npy  delta_sol.npy  finger_delta.npy  finger_u.npy  finger_x.npy  improved_c3_z_sol.npy  original_c3_x.txt  original_delta.npy  original_z.npy  predict.npy  x_.npy  z_sol.npy
docs/guides/: HOW_TO_MIGRATE.md
examples/: BUILD.bazel  README.md  c3_controller_example.cc  c3_example.cc  improved_c3_cartpole.cc  lcs_factory_system_example.cc
examples/python/: BUILD.bazel  c3_controller_example.py  c3_example.py  common_systems.py  lcs_factory_example.py  lcs_factory_system_example.py
examples/resources/cartpole_softwalls/: c3Plus_controller_cartpole_options.yaml  c3_controller_cartpole_options.yaml  cartpole_softwalls_no_collision_walls.sdf
examples/resources/cube_pivoting/: c3_controller_pivoting_options.yaml
lcmtypes/: BUILD.bazel  lcmt_c3_intermediates.lcm  lcmt_c3_output.lcm  lcmt_c3_solution.lcm  lcmt_c3_state.lcm  lcmt_c3_trajectories.lcm  lcmt_c3_trajectory.lcm  lcmt_contact_force.lcm  lcmt_contact_forces.lcm  lcmt_forces.lcm  lcmt_intermediates.lcm  lcmt_output.lcm  lcmt_solution.lcm  lcmt_trajectory.lcm
multibody/: BUILD.bazel  README.md  contact_evaluator.cc  contact_evaluator.h  geom_geom_collider.cc  geom_geom_collider.h  lcs_factory.cc  lcs_factory.h  lcs_factory_options.h  multibody_utils.cc  multibody_utils.h
multibody/test/: lcs_factory_test.cc  multibody_test.cc
multibody/test/resources/: lcs_factory_pivoting_options.yaml  sphere-and-mesh.sdf
solvers/: BUILD.bazel  qp_data.cc  qp_data.h  qpalm_solver.cc  qpalm_solver.h
solvers/test/: qp_solvers_test.cc
src/: BUILD.bazel  c3.cc  c3.h  c3_miqp.cc  c3_miqp.h  c3_options.h  fast_osqp_solver.cc  fast_osqp_solver.h  fast_osqp_solver_common.cc  lcs.cc  lcs.h
src/test/: C3.py  c3_py_ti_test.py  c3_test.cc  system_dynamics.py
systems/: BUILD.bazel  c3_controller.cc  c3_controller.h  c3_controller_options.h  lcs_factory_system.cc  lcs_factory_system.h  lcs_simulator.cc  lcs_simulator.h
systems/common/: quaternion_error_hessian.cc  quaternion_error_hessian.h  system_utils.hpp
systems/framework/: BUILD.bazel  c3_output.cc  c3_output.h  timestamped_vector.cc  timestamped_vector.h
systems/lcmt_generators/: c3_output_generator.cc  c3_output_generator.h  c3_trajectory_generator.cc  c3_trajectory_generator.h  c3_trajectory_generator_config.h  c3_trajectory_generator_options.h  contact_force_generator.cc  contact_force_generator.h
systems/publishers/: force_publisher.cc  force_publisher.h  output_publisher.cc  output_publisher.h
systems/test/: README.md  c3_controller_test.cc  cartpole_geometry.hpp  framework_test.cc  generators_test.cc  lcs_factory_system_test.cc  quaternion_cost_test.cc  quaternion_cost_test.yaml  systems_test.cc  test_utils.hpp
systems/test/res/: c3_pivoting_options.yaml  cartpole_softwalls.sdf  lcs_factory_system_cartpole_test_diagram.ps  lcs_factory_system_pivoting_test_diagram.ps
systems/test/resources/: cube.sdf  plate.sdf  quaternion_cost_test.yaml
systems/test/resources/cartpole_softwalls/: c3_controller_cartpole_options.yaml
systems/test/resources/cube_pivoting/: c3_controller_pivoting_options.yaml  cube_pivoting.sdf
tools/install/: install_prereqs_jammy.sh  install_prereqs_mac.sh  install_prereqs_noble.sh
tools/install/jammy/: Dockerfile
tools/install/noble/: Dockerfile
tools/scripts/: check_format.sh
tools/workspace/: default.bzl
tools/workspace/gurobi/: BUILD.bazel  package-darwin.BUILD.bazel.in  repository.bzl
tools/workspace/libomp/: package.BUILD.bazel  repository.bzl
tools/workspace/osqp/: repository.bzl
