## MODULE.bazel
module(
    name = "c3"
)

# If you don't want to support building on macOS, you may remove the next line.
# Note that it must appear prior to loading "rules_cc", per the documentation:
#  https://github.com/bazelbuild/apple_support?tab=readme-ov-file#bazel-7-setup
bazel_dep(name = "apple_support", version = "2.0.0")

# Add the Bazel rules we need.
bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "platforms", version = "1.0.0")

drake_dep_repositories = use_extension(
    "@drake//tools/workspace:default.bzl",
    "drake_dep_repositories",
)

use_repo(
    drake_dep_repositories,
    "lcm",
    "eigen",
    "fmt",
    "gflags",
    "gtest",
    "pybind11",
    "gurobi",
)

# Use gurobi_cxx, which Drake deprecated
gurobi_extension = use_extension("@c3//tools/workspace/gurobi:repository.bzl", "gurobi_extension")
use_repo(gurobi_extension, "my_gurobi")

# Replace Drake's Gurobi repository with ours.
override_repo(
    drake_dep_repositories,
    gurobi = "my_gurobi",
)

# Here we introduce Drake as a module dependency, but note that Drake is not
# published to any Bazel registry. Below, we'll override it with a github
# source archive.
bazel_dep(name = "drake")

# You can also use DRAKE_COMMIT to choose a Drake release; e.g.:
DRAKE_COMMIT = "v1.42.0"
DRAKE_CHECKSUM = "d860c15f50397c8a946fcc79e0a58a91ebc56f2189ef9edfcac929aa04157f8b"

# Before changing the COMMIT, temporarily uncomment the next line so that Bazel
# displays the suggested new value for the CHECKSUM.
# DRAKE_CHECKSUM = "0" * 64

# This declares the `@drake` module as a source code archive from github.
# See README.md for instructions to use a local path, instead.
archive_override(
    module_name = "drake",
    urls = [x.format(DRAKE_COMMIT) for x in [
        "https://github.com/RobotLocomotion/drake/archive/{}.tar.gz",
    ]],
    sha256 = DRAKE_CHECKSUM,
    strip_prefix = "drake-{}".format(DRAKE_COMMIT.lstrip("v")),
)

# Use the host system /usr/bin/python3.
python_repository = use_repo_rule(
    "@drake//tools/workspace/python:repository.bzl",
    "python_repository",
)

# libomp for OpenMP on macOS
libomp_extension = use_extension("@c3//tools/workspace/libomp:repository.bzl", "libomp_extension")
use_repo(libomp_extension, "libomp")

python_repository(
    name = "python",
    linux_interpreter_path = "/usr/bin/python3",
    requirements_flavor = "build",
)

register_toolchains("@python//:all")