# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "options",
    hdrs = ["c3_options.h",
            "solver_options_io.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "c3",
    srcs = [
        "c3.cc",
        "c3_qp.cc",
    ] + select({
        "//tools:with_gurobi": [
            ":c3_miqp.cc",
        ],
        "//conditions:default": [
            ":c3_miqp_no_gurobi.cc",
        ],
    }),
    hdrs = [
        "c3.h",
        "c3_miqp.h",
        "c3_qp.h",
        "configs/solve_options_default.hpp"
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        ":lcs",
        ":options",
        "@drake//:drake_shared_library",
    ] + select({
         "//tools:with_gurobi": ["@gurobi//:gurobi_cxx"],
         "//conditions:default": [],
    }),
)

cc_library(
    name = "lcs",
    srcs = ["lcs.cc"],
    hdrs = ["lcs.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

filegroup(
    name = 'test_data',
    srcs = glob(['test/resources/**'])
)

cc_library(
    name = "c3_cartpole_problem",
    hdrs = [
        "test/c3_cartpole_problem.hpp",
    ],
    data = [
        ":test_data",
    ]
)

cc_test(
    name = "c3_test",
    srcs = ["test/c3_test.cc"],
    deps = [
        ":c3",
        ":c3_cartpole_problem",
        "@gtest//:main",
    ],
    env_inherit = [
        "GUROBI_HOME",
        "GRB_LICENSE_FILE"
    ],
)


