load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_java_library",
    "drake_lcm_py_library",
)
load(
    "@drake//tools/skylark:drake_java.bzl",
    "drake_java_binary",
)
load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

#Lcm libraries
drake_lcm_cc_library(
    name = "lcmtypes_c3",
    lcm_package = "c3",
    lcm_srcs = glob(["*.lcm"]),
)