load(
    "@drake//tools/skylark:java.bzl",
    "java_binary",
)
load(
    "@lcm//lcm-bazel:lcm_cc_library_srcs.bzl",
    "lcm_cc_library_srcs",
)
load(
    "@lcm//lcm-bazel:lcm_java_library_srcs.bzl",
    "lcm_java_library_srcs",
)
load(
    "@lcm//lcm-bazel:lcm_library.bzl",
    "lcm_library",
)
load(
    "@lcm//lcm-bazel:lcm_py_library_srcs.bzl",
    "lcm_py_library_srcs",
)
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

ALL_LCM_SRCS = glob(["*.lcm"])

lcm_library(
    name = "messages",
    srcs = ALL_LCM_SRCS,
    lcm_package = "c3",
    visibility = ["//visibility:public"],
)

lcm_cc_library_srcs(
    name = "messages_cc_srcs",
    src = ":messages",
)

#Lcm libraries
cc_library(
    name = "lcmt_c3",
    srcs = [":messages_cc_srcs"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = ["@lcm//lcm:lcm-coretypes"],
)


lcm_java_library_srcs(
    name = "messages_java_srcs",
    src = ":messages",
)

java_library(
    name = "lcmtypes_c3_java",
    srcs = [":messages_java_srcs"],
    visibility = ["//visibility:public"],
    deps = ["@lcm//lcm-java"],
)   

lcm_py_library_srcs(
    name = "messages_py_srcs",
    src = ":messages",
)

py_library(
    name = "lcmtypes_c3_py",
    srcs = [":messages_py_srcs"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "c3-lcm-spy",
    main_class = "lcm.spy.Spy",
    visibility = ["//visibility:private"],
    runtime_deps = [
        ":lcmtypes_c3_java",
        "@drake//lcmtypes:lcmtypes_drake_java",
    ],
)
