# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "multibody",
    visibility = ["//visibility:public"],
    deps = [
        ":lcs_factory",
        ":options"
    ],
)

cc_library(
    name = "lcs_factory",
    srcs = ["lcs_factory.cc",
            "geom_geom_collider.cc",
            "multibody_utils.cc"],
    hdrs = [
        "lcs_factory.h",
        "geom_geom_collider.h",
        "multibody_utils.h",
    ],
    deps = [
        ":options",
        '//core:lcs',
        '//core:options',
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "options",
    hdrs = [
        "lcs_factory_options.h"
            ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

filegroup(
    name = 'test_data',
    srcs = glob(['test/resources/**'])
)

cc_test(
    name = "lcs_factory_test",
    srcs = ["test/lcs_factory_test.cc"],
    data = [
        ":test_data",
        "//systems:test_data",
    ],
    deps = [
        ":lcs_factory",
        "@gtest//:main",
    ],
)

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
    ]),
    visibility = ["//visibility:public"],
)
