# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "multibody",
    visibility = ["//visibility:public"],
    deps = [
        ":lcs_factory",
        ":options"
    ],
)

cc_library(
    name = "geom_geom_collider",
    srcs = ["geom_geom_collider.cc"],
    hdrs = ["geom_geom_collider.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "multibody_utils",
    srcs = ["multibody_utils.cc"],
    hdrs = ["multibody_utils.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lcs_factory",
    srcs = [
        "lcs_factory.cc", 
        "contact_evaluator.cc"
    ],
    hdrs = [
        "lcs_factory.h", 
        "contact_evaluator.h"
    ],
    deps = [
        ":geom_geom_collider",
        ":multibody_utils",
        ":options",
        '//core:lcs',
        '//core:options',
        "@drake//:drake_shared_library",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "options",
    hdrs = [
        "lcs_factory_options.h"
            ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

filegroup(
    name = 'test_data',
    srcs = glob(['test/resources/**'])
)

cc_test(
    name = "multibody_test",
    srcs = ["test/multibody_test.cc"],
    data = [
        ":test_data",
        "//examples:example_data",
    ],
    deps = [
        ":lcs_factory",
        "@gtest//:main",
    ],
    size = "small",
)

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
    ]),
    visibility = ["//visibility:public"],
)
