# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "c3_test",
    srcs = ["test/c3_test.cc"],
    deps = [
        ":c3"
    ],
)


py_binary(
    name = "c3_py_test",
    srcs = ["test/c3_py_test.py"],
    deps = [
        "//bindings/pyc3:c3_py"
    ]
)

cc_library(
    name = "c3",
    srcs = [
        "c3.cc",
        "c3_miqp.cc",
    ],
    hdrs = [
        "c3.h",
        "c3_miqp.h",
        "c3_options.h",
    ],
    deps = [
        ":lcs",
        "@drake//:drake_shared_library",
        "@gurobi//:gurobi_cxx",
         "//src:fast_osqp_solver",
    ],
    copts = [
        "-fopenmp"
    ],
    linkopts = [
        "-lgomp"
    ]
)

cc_library(
    name = "lcs",
    srcs = [
        "lcs.cc",
    ],
    hdrs = [
        "lcs.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
cc_library(
    name = "fast_osqp_solver",
    srcs = [
        "fast_osqp_solver.cc",
        "fast_osqp_solver_common.cc",
    ],
    hdrs = [
        "fast_osqp_solver.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "@osqp",
    ],
)
