# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "c3_test",
    srcs = ["test/c3_test.cc"],
    deps = [
        ":c3",
    ],
)

py_binary(
    name = "c3_py_ti_test",
    srcs = ["test/c3_py_ti_test.py"],
    deps = [
        "//bindings/pyc3:c3_py",
    ],
)

py_binary(
    name = "c3_py_test",
    srcs = ["test/c3_py_test.py"],
    deps = [
        "//bindings/pyc3:c3_py",
    ],
)

cc_library(
    name = "c3",
    srcs = [
        "c3.cc",
        "c3_miqp.cc",
    ],
    hdrs = [
        "c3.h",
        "c3_miqp.h",
        "c3_options.h",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = [
        "-lgomp",
    ],
    deps = [
        ":lcs",
        "@drake//:drake_shared_library",
        "@gurobi//:gurobi_cxx",
    ],
)

cc_library(
    name = "lcs",
    srcs = [
        "lcs.cc",
    ],
    hdrs = [
        "lcs.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
