# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "systems",
    visibility = ["//visibility:public"],
    deps = [
        ":framework",
        ":options",
        ":c3_controller",
        ":lcs_simulator",
        ":lcs_factory_system",
        ":lcmt_generators",
    ]
)

cc_library(
    name = "framework",
    srcs = [
        "framework/c3_output.cc",
        "framework/timestamped_vector.cc",
    ],
    hdrs = [
        "framework/c3_output.h",
        "framework/timestamped_vector.h",
    ],
    deps = [
        "//lcmtypes:lcmt_c3",
        "@drake//:drake_shared_library",
    ],
)

cc_library( name = "c3_controller",
    srcs = [
        "c3_controller.cc",
    ],
    hdrs = [
        "c3_controller.h",
    ],
    deps = [
        ":options",
        ":framework",
        "//core:c3",
        "//core:options",
        "//multibody:lcs_factory",
        "@drake//:drake_shared_library",
    ],
)

cc_library( name = "lcs_simulator",
    srcs = [
        "lcs_simulator.cc",
    ],
    hdrs = [
        "lcs_simulator.h",
    ],
    deps = [
        "//core:lcs",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "lcs_factory_system",
    srcs = [
        "lcs_factory_system.cc",
    ],
    hdrs = [
        "lcs_factory_system.h",
    ],
    deps = [
        ":framework",
        "//core:lcs",
        "//core:options",
        "//multibody:lcs_factory",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "options",
    hdrs = [
        "c3_controller_options.h",
    ],
    deps = [
        "//core:options",
        "//multibody:options",
    ]
)

cc_library(
    name = "lcmt_generators",
    srcs = [
        "lcmt_generators/c3_output_generator.cc",
        "lcmt_generators/contact_force_generator.cc",
        "lcmt_generators/c3_trajectory_generator.cc",
    ],
    hdrs = [
        "lcmt_generators/c3_output_generator.h",
        "lcmt_generators/contact_force_generator.h",
        "lcmt_generators/c3_trajectory_generator.h",
        "lcmt_generators/c3_trajectory_generator_config.h",
    ],
    deps = [
        ":framework",
        "//multibody:lcs_factory",
        "//lcmtypes:lcmt_c3",
        "@drake//:drake_shared_library",
    ],
)


filegroup(
    name = 'test_data',
    srcs = glob(['test/resources/**'])
)

cc_binary(
    name = "c3_controller_test",
    srcs = [
        "test/c3_controller_test.cc", 
        "test/test_utils.hpp" ],
    data = [
        ":test_data"
    ],
    deps = [
        "//core:c3",
        ":systems",
        ":system_utils",
        "//core:c3_cartpole_problem",
    ]
)

cc_binary(
    name = "lcs_factory_system_test",
    srcs = [
        "test/lcs_factory_system_test.cc", 
        "test/test_utils.hpp" ],
    data = [
        ":test_data",
    ],
    deps = [
        "//core:c3",
        ":systems",
        ":system_utils",
        "//core:c3_cartpole_problem",
        "@gflags",
    ]
)

cc_library(
    name = "system_utils",
    hdrs = [
        "common/system_utils.hpp",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

exports_files(glob(["**/*.h", "**/*.hpp"]),
    visibility = ["//visibility:public"],
)
