# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vector",
    srcs = [
        "framework/timestamped_vector.cc",
    ],
    hdrs = [
        "framework/timestamped_vector.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "systems",
    srcs = [
        "c3_controller.cc",
        "lcs_simulator.cc",
        "framework/c3_output.cc",
        "lcs_factory_system.cc",
    ],
    hdrs = [
        "c3_controller.h",
        "lcs_simulator.h",
        "framework/c3_output.h",
        "lcs_factory_system.h",
        
        ],
    deps = [
        ":vector",
        ":options",
        "//core:c3",
        "//core:options",
        "//multibody:lcs_factory",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "options",
    hdrs = [
        "c3_controller_options.h",
    ],
    deps = [
        "//core:options",
        "//multibody:options",
        "@drake//:drake_shared_library",
    ]
)



cc_library(
    name = "system_utils",
    hdrs = [
        "common/system_utils.hpp",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_test(
    name = "systems_test",
    srcs = [
        "test/systems_test.cc",
    ],
    data = [
        "//examples:example_data",
    ],
    deps = [
        ":systems",
        "//core:c3_cartpole_problem",
        "@gtest//:main",
    ],
    env_inherit = [
        "GUROBI_HOME",
        "GRB_LICENSE_FILE"
    ],
)

cc_test(
    name = "framework_test",
    srcs = [
        "test/framework_test.cc"
    ],
    deps = [
        ":systems",
        ":vector",
        "@gtest//:main",
    ],
)
