# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "systems",
    visibility = ["//visibility:public"],
    deps = [
        ":framework",
        ":options",
        ":c3_controller",
        ":lcs_simulator",
        ":lcs_factory_system",
    ]
)

cc_library(
    name = "framework",
    srcs = [
        "framework/c3_output.cc",
        "framework/timestamped_vector.cc",
    ],
    hdrs = [
        "framework/c3_output.h",
        "framework/timestamped_vector.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library( name = "c3_controller",
    srcs = [
        "c3_controller.cc",
    ],
    hdrs = [
        "c3_controller.h",
    ],
    deps = [
        ":options",
        ":framework",
        "//core:c3",
        "//core:options",
        "//multibody:lcs_factory",
        "//systems:quaternion_error_hessian",
        "@drake//:drake_shared_library",
    ],
)

cc_library( name = "lcs_simulator",
    srcs = [
        "lcs_simulator.cc",
    ],
    hdrs = [
        "lcs_simulator.h",
    ],
    deps = [
        "//core:lcs",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "lcs_factory_system",
    srcs = [
        "lcs_factory_system.cc",
    ],
    hdrs = [
        "lcs_factory_system.h",
    ],
    deps = [
        ":framework",
        "//core:lcs",
        "//core:options",
        "//multibody:lcs_factory",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "options",
    hdrs = [
        "c3_controller_options.h",
    ],
    deps = [
        "//core:options",
        "//multibody:options",
        "@drake//:drake_shared_library",
    ]
)


cc_library(
    name = "quaternion_error_hessian",
    srcs = [
        "common/quaternion_error_hessian.cc"
    ],
    hdrs = [
        "common/quaternion_error_hessian.h"
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "system_utils",
    hdrs = [
        "common/system_utils.hpp",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
cc_test(
    name = "systems_test",
    srcs = [
        "test/systems_test.cc",
    ],
    data = [
        "//examples:example_data",
    ],
    deps = [
        ":systems",
        "//core:c3_cartpole_problem",
        "@gtest//:main",
    ],
    env_inherit = [
        "GUROBI_HOME",
        "GRB_LICENSE_FILE"
    ],
)

cc_test(
    name = "framework_test",
    srcs = [
        "test/framework_test.cc"
    ],
    deps = [
        ":systems",
        ":framework",
        "@gtest//:main",
    ],
)

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "**/*.h",
    ]),
    visibility = ["//visibility:public"],
)
