load(
    "@drake//tools/skylark:pybind.bzl",
    "get_pybind_package_info",
    "pybind_py_library",
)
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

package(default_visibility = ["//visibility:public"])

pybind_py_library(
    name = "c3_py",
    cc_deps = [
        "//core:c3",
        "//core:improved_c3",
    ],
    cc_so_name = "c3",
    cc_srcs = ["c3_py.cc"],
    py_deps = [
        ":module_py",
    ],
    py_imports = ["."],
)

# This determines how `PYTHONPATH` is configured, and how to install the
# bindings.
PACKAGE_INFO = get_pybind_package_info("//bindings")

py_library(
    name = "module_py",
    srcs = [
        "__init__.py",
    ],
    imports = PACKAGE_INFO.py_imports,
    deps = [
    ],
)

PY_LIBRARIES = [
    ":module_py",
    ":c3_py",
]

# Package roll-up (for Bazel dependencies).
py_library(
    name = "pyc3",
    imports = PACKAGE_INFO.py_imports,
    deps = PY_LIBRARIES,
)

# Use py_package to collect all transitive dependencies of a target,
# selecting just the files within a specific python package.
py_package(
    name = "c3_pkg",
    # Only include these Python packages.
    packages = [],
    deps = [
        ":pyc3",
        "@gurobi//:gurobi_c",
    ],
)

py_wheel(
    name = "pyc3_wheel",
    # Package data. We're building "example_minimal_package-0.0.1-py3-none-any.whl"
    distribution = "pyc3",
    license = "MIT",
    platform = "linux_x86_64",
    python_tag = "py3",
    strip_path_prefixes = ["bindings/"],
    version = "0.0.2",
    deps = [":c3_pkg"],
)
