package(default_visibility = ["//visibility:public"])


py_binary(
    name = "c3_py_test",
    srcs = ["c3_py_test.py"],
    deps = [
        "//bindings/pyc3:pyc3",
    ],
    data = [
        "//core:test_data",
    ],
)

py_binary(
    name = "c3_systems_py_test",
    srcs = ["c3_systems_py_test.py"],
    deps = [
        "//bindings/pyc3:pyc3",
    ],
    data = [
        "//core:test_data",
        "//systems:test_data"
    ],
)