package(default_visibility = ["//visibility:public"])


py_binary(
    name = "c3_core_py_test",
    srcs = ["c3_core_py_test.py"],
    deps = [
        "//bindings/pyc3:pyc3",
    ],
    data = [
        "//core:test_data",
    ],
)

py_binary(
    name = "c3_controller_py_test",
    srcs = ["c3_controller_py_test.py"],
    deps = [
        "//bindings/pyc3:pyc3",
        ":c3_core_py_test",
    ],
    data = [
        "//core:test_data",
        "//systems:test_data"
    ],
)