package(default_visibility = ["//visibility:public"])


py_binary(
    name = "c3_example",
    srcs = ["c3_example.py"],
    deps = [
        "//bindings/pyc3:pyc3",
    ],
    data = [
        "//core:test_data",
    ],
)

py_binary(
    name = "c3_controller_example",
    srcs = ["c3_controller_example.py"],
    deps = [
        "//bindings/pyc3:pyc3",
        ":c3_example",
    ],
    data = [
        "//examples:example_data"
    ],
)

py_binary(
    name = "lcs_factory_example",
    srcs = ["lcs_factory_example.py"],
    deps = [
        "//bindings/pyc3:pyc3",
    ],
    data = [
        "//core:test_data",
        "//multibody:test_data",
        "//examples:example_data"
    ],
)

py_binary(
    name = "lcs_factory_system_example",
    srcs = ["lcs_factory_system_example.py"],
    deps = [
        "//bindings/pyc3:pyc3",
        ":c3_example",
    ],
    data = [
        "//examples:example_data"
    ],
)