# -*- python -*-

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vector",
    srcs = [
        "timestamped_vector.cc",
    ],
    hdrs = [
        "timestamped_vector.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
